# quant-api

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  SETUP.md  main.py  package.json  pyproject.toml  railway.toml
docs/: API.md  ARCHITECTURE.md  INTEGRATION.md  consumer-integration.md
src/: main.py  uvicorn-log-config.json
src/data/: __init__.py  clickhouse_client.py  supabase_client.py
src/models/: pydantic_schemas.py
src/quantitative/: backtest_math.py
src/routers/: v1_portfolio_builder.py
src/utils/: audit_logger.py
tests/: test_backtest_audit.py  test_backtest_endpoint.py  test_backtest_math.py  test_health.py  test_historical_prices.py
