[project]
name = "quant-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "uvicorn[standard]>=0.41.0",
    "psycopg2-binary>=2.9",
    "pandas>=2.2",
    "numpy>=2.0",
    "pydantic>=2.10",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
